[OPTIONS]Renaming trigger params

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -390,7 +390,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
                             value: 2000
                         },
                         /**
-                         * Delay without any recognition result received before processing the last one received, only use in WEBSOKET mode.
+                         * Delay without any recognition result received before processing the last one received, only use in WEBSOCKET mode.
                          * @type Number
                          * @default 2000
                          */
