--- a/demo/languages.html
+++ b/demo/languages.html
@@ -26,10 +26,9 @@
 <div id="parameters">
     <select id="language" disabled></select>
 </div>
-<myscript-languages-element scheme="http"
-                            host="localhost:8894"
-                            applicationKey="295205e4-a30c-4cf0-8a5a-037864bacc3d"
-                            hmacKey="b07c360d-6f06-4b09-afda-2da3abb2abb4"
+<myscript-languages-element scheme="https"
+                            host="cloud-internal-stable.visionobjects.com"
+                            applicationKey="a8f991e2-994d-4f36-b61d-55f7ddf6f85d"
                             languages="{{ languages }}"
                             sortByValue>
 </myscript-languages-element>
