[Style]Changing style to adapt to devportal design

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -33,7 +33,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
             min-width: 200px;
             --paper-fab-background: #1A9FFF;
             --paper-fab-keyboard-focus-background: #1A9FFF;
-            --paper-fab-disabled-background: #F5F6F7;
+            --paper-fab-disabled-background: #D7DADC;
             --paper-fab-disabled-text: #dcdee0;
         }
         .buttons {
