--- a/demo/languages-selector-init.html
+++ b/demo/languages-selector-init.html
@@ -30,12 +30,9 @@
 </head>
 <body touch-action="none">
 <div id="waiting">myscript-languages-element will be loaded in 3 seconds with customs params.</div>
-<div id="parameters">
-    <select id="language" disabled></select>
-</div>
+<select id="language" disabled></select>
 <myscript-languages-element host="cloud-internal-stable.visionobjects.com" unloaded></myscript-languages-element>
 <script>
-
     window.addEventListener("load", function (event) {
         window.setTimeout(function () {
             var waitingDiv = document.querySelector('#waiting');
@@ -47,7 +44,6 @@
                 sortByValue: true
             };
             var myscriptLanguagesElement = document.querySelector('myscript-languages-element');
-            var languageElement = document.getElementById('language');
             // Testing if attributes binding via DOM, setAttribute or direct object manipulation is working.
             myscriptLanguagesElement.setAttribute('type', mycustomconfiguration.type);
             myscriptLanguagesElement.applicationkey = mycustomconfiguration.applicationKey;
@@ -69,12 +65,14 @@
             myscriptLanguagesElement.unloaded = false;
             console.log("myscript-languages-element should be loaded");
 
+            var currentLanguage = myscriptLanguagesElement.configuration.recognitionParams.v3.analyzerParameter.textParameter.language;
+            var languageSelect = document.getElementById('language');
             myscriptLanguagesElement.addEventListener('myscript-languages-element-result', function (evt) {
-                var currentLanguage = myscriptLanguagesElement.configuration.recognitionParams.v3.analyzerParameter.textParameter.language;
                 evt.detail.forEach(function (language) {
-                    languageElement.options[languageElement.options.length] = new Option(language.description, language.value, true, currentLanguage === language.value);
-                    languageElement.disabled = false;
+                    var selected = currentLanguage === language.value;
+                    languageSelect.options[languageSelect.options.length] = new Option(language.description, language.value, selected, selected);
                 });
+                languageSelect.disabled = false;
             });
         }, 3000);
     });
