--- a/demo/languages.html
+++ b/demo/languages.html
@@ -29,23 +29,21 @@
     </style>
 </head>
 <body touch-action="none">
-<div id="parameters">
-    <select id="language" disabled></select>
-</div>
+<select id="language" disabled></select>
 <myscript-languages-element scheme="https"
                             host="cloud-internal-stable.visionobjects.com"
                             applicationKey="a8f991e2-994d-4f36-b61d-55f7ddf6f85d"
-                            languages="{{ languages }}"
                             sortByValue>
 </myscript-languages-element>
 <script>
+    var currentLanguage = 'en_US';
+    var languageSelect = document.getElementById('language');
     document.querySelector('myscript-languages-element').addEventListener('myscript-languages-element-result', function (evt) {
-      var languageElement=  document.getElementById('language');
-      var currentLanguage = 'en_US';
-      evt.detail.forEach(function (language) {
-        languageElement.options[languageElement.options.length] = new Option(language.description, language.value, true, currentLanguage === language.value);
-        languageElement.disabled = false;
-      });
+        evt.detail.forEach(function (language) {
+            var selected = currentLanguage === language.value;
+            languageSelect.options[languageSelect.options.length] = new Option(language.description, language.value, selected, selected);
+        });
+        languageSelect.disabled = false;
     });
 </script>
 </body>
