--- a/demo/programmatic-init.html
+++ b/demo/programmatic-init.html
@@ -5,16 +5,18 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-math-web demo</title>
+    <title>myscript-common-element demo</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../myscript-common-element.html">
     <link rel="stylesheet" href="demo.css">
 </head>
 <body touch-action="none">
-<div id="waiting">myscript-common-element will be loaded in 3 seconds with customs params.</div>
-<myscript-common-element host="webdemoapi.myscript.com" unloaded>
-</myscript-common-element>
+    <div id="waiting">myscript-common-element will be loaded in 3 seconds with customs params.</div>
+    <myscript-common-element
+        host="webdemoapi.myscript.com">
+    </myscript-common-element>
+</body>
 <script>
     window.addEventListener("load", function (event) {
         window.setTimeout(function () {
@@ -28,6 +30,7 @@
                 hmacKey: '54b2ca8a-6752-469d-87dd-553bb450e9ad'
             };
             var myscriptCommonElement = document.querySelector('myscript-common-element');
+            myscriptCommonElement.unloaded = true;
             // Testing if attributes binding via DOM, setAttribute or direct object manipulation is working.
             myscriptCommonElement.setAttribute('type', mycustomconfiguration.type);
             myscriptCommonElement.applicationkey = mycustomconfiguration.applicationKey;
@@ -52,5 +55,4 @@
         }, 3000);
     });
 </script>
-</body>
 </html>
