--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -3,6 +3,7 @@ Copyright © MyScript.
 LICENSE: [Apache License 2.0](http://www.apache.org/licenses/LICENSE-2.0)
 -->
 <link rel="import" href="./pepjs-import.html">
+<link rel="import" href="./myscriptjs-import.html">
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
@@ -84,13 +85,28 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                 margin: 6px;
             }
 
-            #editorDomElement {
+            .ms-editor {
+                position: absolute;
+                height: 100%;
+                width: 100%;
+            }
+
+            .ms-editor canvas,
+            .ms-editor svg {
+                z-index: 15;
                 position: absolute;
                 left: 0;
                 top: 0;
                 height: 100%;
                 width: 100%;
             }
+
+            .ms-editor canvas.ms-rendering-canvas,
+            .ms-editor svg {
+                z-index: 10;
+                pointer-events: none;
+            }
+
 
             .serverunreachable {
                 position: absolute;
@@ -131,7 +147,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                            hidden="[[ disabletypeset ]]"></paper-fab>
             </div>
         </template>
-        <div id="editorDomElement" hidden="[[ detached ]]"></div>
+        <div id="editorDomElement" class="ms-editor" hidden="[[ detached ]]"></div>
         <div class="serverunreachable" hidden>
             <div class="error-msg" hidden><p class="detail-msg">MyScript recognition server is not reachable. Please
                 reload once you are
@@ -141,7 +157,6 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
         </div>
         <paper-toast class="fit-bottom"></paper-toast>
     </template>
-    <script src="../myscript/dist/myscript.min.js"></script>
     <script>
         /**
          * Uncomment the function body during development. Should not be activated in production.
